--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,7 @@ jobs:
           sudo apt-get install -y google-chrome-stable
 
       - name: Run the bot script
+        id: bot-run
         env:
           SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
           SENDER_PASSWORD: ${{ secrets.SENDER_PASSWORD }}
@@ -36,7 +37,23 @@ jobs:
         run: python career_fair_bot.py
       
       - name: Commit and push alert log
+        # This step will only run if the previous steps were successful
+        if: success()
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "Log new meeting alerts"
           file_pattern: sent_alerts.log
+          
+      - name: List files for debugging
+        # This step will only run if a previous step has failed
+        if: failure()
+        run: ls -la
+        
+      - name: Upload debug artifacts on failure
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: debug-artifacts
+          path: |
+            debug_screenshot.png
+            debug_page_source.html
