Refactor workflow to streamline URL handling and reporting
Removed redundant URL processing and email sending logic, simplifying the workflow.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,8 +39,6 @@ jobs:
           # This long string contains all your URLs, separated by spaces
           ALL_URLS: "https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1720020857770001nrcJ https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1712942120293001LSc4 https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1713188687975001PkXb https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1722441485393001ZFzy https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1712944582844001LZAP https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1754886602618001ip4b https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1713189549333001dJUV https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1713189549413001dSU4 https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1713361999237001RCeP https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1748405927054001couI https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1713912142591001YeKA https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1720020857878001njZu https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1716336263629001WWCH https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1713188687826001P5dy https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1722441485163001Z0f4 https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1713189549743001dLGN https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1713188688172001PAPx https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1713188688221001PBYL https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1717597285016001U6Os https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1754493196793001TMGt https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1713188688480001Pktf https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1713188688528001PZX4 https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1749533408322001SdGx https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1747784539000001oRmx https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1748405927235001cDQn https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1721836626068001VVzc https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1713188689116001PesZ https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1713361999456001Re3O https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1750881473389001gMnU https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1713188689461001PWIM https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1719414268768001c7dq https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1713189550555001dQJZ https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1713189550644001dUTp https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1713189550720001dUQC https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1713188690247001Pw4B https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1714576726611001G3IM https://gracehoppercelebration.com/flow/anitab/vcf25/attendeeportal/page/exhibitor-catalog/exhibitor/1713189550799001dCWs"
         run: |
-          # This command cleverly splits the list of all URLs into 4 chunks
-          # and gives this job its assigned piece.
           URL_CHUNK=$(echo $ALL_URLS | tr ' ' '\n' | awk -v chunk=${{ matrix.chunk_index }} -v total=4 'NR % total == chunk % total')
           echo "URLS_TO_CHECK=$URL_CHUNK" >> $GITHUB_ENV
           echo "OUTPUT_FILE=active_urls_${{ matrix.chunk_index }}.txt" >> $GITHUB_ENV
@@ -76,63 +74,7 @@ jobs:
           SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
           SENDER_PASSWORD: ${{ secrets.SENDER_PASSWORD }}
           RECEIVER_EMAIL: ${{ secrets.RECEIVER_EMAIL }}
-        run: |
-          # Create an empty file to prevent errors if no artifacts are found
-          touch all_active_urls.txt
-          
-          # Combine results from all checker jobs
-          if [ -d "artifacts" ] && [ "$(ls -A artifacts)" ]; then
-            cat artifacts/*.txt | sort -u > all_active_urls.txt
-          fi
-          
-          touch sent_alerts.log
-          
-          # Find URLs that are new since the last run
-          comm -23 all_active_urls.txt sent_alerts.log > new_alerts.txt
-
-          if [ -s new_alerts.txt ]; then
-            echo "Found new active URLs to report:"
-            cat new_alerts.txt
-            
-            # Use Python to send the final email
-            pip install secure-smtplib
-            export URL_LIST=$(cat new_alerts.txt | tr '\n' ' ')
-            python -c "
-import os, smtplib
-from email.mime.text import MIMEText
-
-SENDER = os.environ.get('SENDER_EMAIL')
-PASSWORD = os.environ.get('SENDER_PASSWORD')
-RECEIVER_STRING = os.environ.get('RECEIVER_EMAIL')
-URLS = os.environ.get('URL_LIST').split()
-
-if not all([SENDER, PASSWORD, RECEIVER_STRING]):
-    print('Email credentials missing.')
-else:
-    recipients = [email.strip() for email in RECEIVER_STRING.split(',')]
-    count = len(URLS)
-    subject = f'ACTION REQUIRED: {count} Meeting Slot(s) Open at AnitaB Fair!'
-    body = 'The \\'Request meeting\\' button is now ACTIVE for the following opportunities:\\n\\n' + '\\n\\n'.join(URLS)
-    
-    msg = MIMEText(body)
-    msg['Subject'] = subject
-    msg['From'] = SENDER
-    msg['To'] = RECEIVER_STRING # The 'To' header shows the comma-separated list
-    
-    try:
-        with smtplib.SMTP_SSL('smtp.gmail.com', 465) as server:
-            server.login(SENDER, PASSWORD)
-            # The sendmail method requires a list of recipients
-            server.sendmail(SENDER, recipients, msg.as_string())
-        print(f'Consolidated email sent successfully to: {RECEIVER_STRING}')
-    except Exception as e:
-        print(f'Failed to send email: {e}')
-            "
-            
-            cat new_alerts.txt >> sent_alerts.log
-          else:
-            echo "No new alerts to send."
-          fi
+        run: python reporter.py
 
       - name: Commit and push alert log
         uses: stefanzweifel/git-auto-commit-action@v5
